syntax = "proto3";

import "types/business_types.proto";

option java_multiple_files = true;
option java_package = "ru.process_service";


service ProcessService {
  rpc getProcessStatus(businessTypes.Process) returns (businessTypes.ProcessStatus);
}